// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Addpost /> with user of userPage matching the session user renders <input>, <button>, and "Add Post" 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/gibong@gmail.com",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/gibong@gmail.com",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/gibong@gmail.com",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Route
      exact={true}
      path="/:user"
    >
      <AddPost
        currentUser="gibong@gmail.com"
        posting={
          Array [
            Object {
              "_id": "5e8ec52d9bb4913b5a844423",
              "id": 1,
              "imageUrl": "http://localhost:3000/static/images/1.jpg",
              "like": Array [
                "gibong@gmail.com",
              ],
              "tag": Array [
                "landscape",
              ],
              "title": "posting with id 1",
              "userName": "gibong@gmail.com",
            },
          ]
        }
      >
        <input
          onChange={[Function]}
          value=""
        />
        <button
          id="buttonAdd"
          onClick={[Function]}
          type="button"
        >
          Add Post
        </button>
      </AddPost>
    </Route>
  </Router>
</MemoryRouter>
`;

exports[`<Addpost /> without user of userPage matching the session user renders nothing 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/guy@gmail.com",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/guy@gmail.com",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/guy@gmail.com",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Route
      exact={true}
      path="/:user"
    >
      <AddPost
        currentUser="gibong@gmail.com"
        match={
          Object {
            "params": Object {
              "user": "gibong@gmail.com",
            },
          }
        }
        posting={
          Array [
            Object {
              "_id": "5e8ec52d9bb4913b5a844423",
              "id": 1,
              "imageUrl": "http://localhost:3000/static/images/1.jpg",
              "like": Array [
                "gibong@gmail.com",
              ],
              "tag": Array [
                "landscape",
              ],
              "title": "posting with id 1",
              "userName": "gibong@gmail.com",
            },
          ]
        }
      />
    </Route>
  </Router>
</MemoryRouter>
`;
